--- a/views/css/style.css
+++ b/views/css/style.css
@@ -9,7 +9,7 @@
         min-width: 280;
     }
 }
-.formulario-fondo {
+body {
     background-image: url('../img/fondo.jpg');
     background-attachment: fixed;
     background-repeat: no-repeat;
