Panel de usuarios al iniciar sesión creado, estilizado, pero sin funciones o botones activos

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -20,3 +20,7 @@ body {
     -moz-background-size: cover;
     -o-background-size: cover;
 }
+.dashboard {
+    background-color: rgba(255, 255, 255, 0.74);
+    border: solid 1px rgba(0, 0, 0, 0.75);
+}
