Busquedas de usuario , panel de servicios (ver, crear y actualizar), ver usuarios, opciones dependiendo del tipo de usuario y retroalimentaciones

--- a/views/css/style.css
+++ b/views/css/style.css
@@ -24,3 +24,7 @@ body {
     background-color: rgba(255, 255, 255, 0.74);
     border: solid 1px rgba(0, 0, 0, 0.75);
 }
+#description-service {
+    resize: none;
+    height: 100px;
+}
